# aperio-old

./: .gitignore  package.json  pyproject.toml
.github/workflows/: release.yml
plugins/base/: __init__.py
plugins/base/objects/: test.py
scripts/: copy-python.sh  update-uv.py  update-uv.ts
src/: App.tsx  main.tsx
src-python/: __init__.py  pyproject.toml
src-python/plugin_base/: generator_base.py  plugin_base.py
src-python/src/aperio_plugin/: __init__.py
src-python/src/aperio_plugin/plugin_base/: __init__.py  generator_base.py
src-python/src/aperio_plugin/types/: frame_structure.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/data/: default-config.json
src-tauri/src/: app_config.rs  dir_util.rs  lib.rs  main.rs  python.rs  startup.rs  stream.rs  ws.rs
src-tauri/src/python/: initialize.rs  utils.rs
src-tauri/src/stream/: need_enough.rs  new_sample.rs  pipeline.rs  utils.rs
