[package]
name = "aperio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aperio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
tauri-plugin-shell = "2"
anyhow = { version = "1.0.100", features = ["backtrace"] }
futures-util = "0.3.31"
gstreamer = "0.24.2"
gstreamer-video = "0.24.2"
tokio-tungstenite = "0.28.0"
gstreamer-app = "0.24.2"
tokio = { version = "1.47.1", features = ["macros"] }
glib = "0.21.3"
toml_edit = "0.23.6"
